objects/SBQQ__DiscountSchedule__c.object
<CustomObject>
    <customHelpPage>SBQQ__DiscountScheduleHelp</customHelpPage>
    <description>Volume discount schedule that applies automatic discounts based on quantity.</description>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External Id value for use with Copado Data Deployer or other external systems</description>
        <externalId>true</externalId>
        <label>ExtId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SBQQ__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account that this discount schedule applies to. Only used in combination with Discount Schedule Override on Quote Line Editor UI.</description>
        <inlineHelpText>Account that this discount schedule applies to. Only used in combination with Discount Schedule Override on Quote Line Editor UI.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Discount Schedules</relationshipLabel>
        <relationshipName>Discount_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__AggregationScope__c</fullName>
        <description>Indicates whether quote lines referencing this schedule should be aggregated within quote, group or not at all for the purposes of volume discount calculation.</description>
        <inlineHelpText>Specify how to aggregate quantities of quote lines for products using this schedule. By default quantity of each line (even for the same product) is considered independently.</inlineHelpText>
        <label>Aggregation Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ConstraintField__c</fullName>
        <description>For cross-order schedules, if you want to limit which subscriptions and assets are used to calculate your volume discounts, select the field that you want to match against the same field on the quote.</description>
        <inlineHelpText>Select the field that you want to match against the same field on the quote.</inlineHelpText>
        <label>Constraint Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__CrossOrders__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether volume discount should be applied on combined quantities across prior orders.</description>
        <inlineHelpText>Select the checkbox if you want to extend volume discounts on total volume owned by customer (i.e. quantity quoted plus prior purchases).</inlineHelpText>
        <label>Cross Orders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CrossProducts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates whether volume discount calculations should aggregate quantities of all products using this schedule.</description>
        <inlineHelpText>Select the checkbox to aggregate quantities of all products using this schedule for the purpose of volume discount calculation. Slab discounts cannot be used for Cross Product discounts.</inlineHelpText>
        <label>Cross Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Description__c</fullName>
        <description>Description for this Discount Schedule.</description>
        <inlineHelpText>Description for this Discount Schedule.</inlineHelpText>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__DiscountUnit__c</fullName>
        <description>This is the Discount Unit for the Discount Schedule.</description>
        <inlineHelpText>Specify the Discount Unit: Amount or Percent.</inlineHelpText>
        <label>Discount Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Percent</fullName>
                    <default>true</default>
                    <label>Percent</label>
                </value>
                <value>
                    <fullName>Amount</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ExcludedPricebookIds__c</fullName>
        <description>Comma-seperated list of price book IDs for which this discount schedule should not apply.</description>
        <inlineHelpText>Enter a list of price book IDs separated by commas that should not be applied to this discount schedule.</inlineHelpText>
        <label>Excluded Pricebook IDs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__IncludeBundledProducts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the Quantities of Bundled Product Options will be included in the Aggregation Scope</description>
        <inlineHelpText>If checked, the Quantities of Bundled Product Options will be included in the Aggregation Scope</inlineHelpText>
        <label>Include Bundled Quantities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__OrderProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Order product that this discount schedule applies to.</description>
        <inlineHelpText>Order product that this discount schedule applies to.</inlineHelpText>
        <label>Order Product</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select Order Products of the associated order.</errorMessage>
            <filterItems>
                <field>OrderItem.OrderId</field>
                <operation>equals</operation>
                <valueField>$Source.SBQQ__Order__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Discount Schedules</relationshipLabel>
        <relationshipName>DiscountSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Order that this discount schedule applies to.</description>
        <inlineHelpText>Order that this discount schedule applies to.</inlineHelpText>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Discount Schedules</relationshipLabel>
        <relationshipName>DiscountSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__OriginalDiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The original Discount Schedule that was overridden to create this Discount Schedule.</description>
        <inlineHelpText>The original Discount Schedule that was overridden to create this Discount Schedule.</inlineHelpText>
        <label>Original Discount Schedule</label>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Discount Schedules</relationshipLabel>
        <relationshipName>DiscountSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__OverrideBehavior__c</fullName>
        <description>Determines if the current Discount Tier that the product falls within is editable, if all Discount Tiers are editable, or none.</description>
        <inlineHelpText>Determines if the current Discount Tier that the product falls within is editable, if all Discount Tiers are editable, or none.</inlineHelpText>
        <label>Override Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Current Tier Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__PriceScale__c</fullName>
        <defaultValue>2</defaultValue>
        <description>Decimal places for prices produced by this discount schedule.</description>
        <inlineHelpText>Decimal places for prices produced by this discount schedule.</inlineHelpText>
        <label>Price Scale</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Pricebook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Price book that this discount schedule applies to. Only used in combination with Product lookup to assign product/price book specific schedule.</description>
        <inlineHelpText>Price book that this discount schedule applies to. Only used in combination with Product lookup to assign product/price book specific schedule.</inlineHelpText>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Discount Schedules</relationshipLabel>
        <relationshipName>DiscountSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product that this discount schedule applies to. Only used in combination with Price Book lookup to assign product/price book specific schedule.</description>
        <inlineHelpText>Product that this discount schedule applies to. Only used in combination with Price Book lookup to assign product/price book specific schedule.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Discount Schedules</relationshipLabel>
        <relationshipName>DiscountSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteLineQuantityField__c</fullName>
        <description>Field used to calculate discount schedule pricing.</description>
        <inlineHelpText>Field used to calculate discount schedule pricing.</inlineHelpText>
        <label>Quote Line Quantity Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quantity</fullName>
                    <default>true</default>
                    <label>Quantity</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quote Line that this discount schedule applies to. Only used in combination with Discount Schedule Override on Quote Line Editor UI.</description>
        <inlineHelpText>Quote Line that this discount schedule applies to. Only used in combination with Discount Schedule Override on Quote Line Editor UI.</inlineHelpText>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Discount Schedules</relationshipLabel>
        <relationshipName>Discount_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quote that this discount schedule applies to. Only used in combination with Discount Schedule Override on Quote Line Editor UI.</description>
        <inlineHelpText>Quote that this discount schedule applies to. Only used in combination with Discount Schedule Override on Quote Line Editor UI.</inlineHelpText>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Discount Schedules</relationshipLabel>
        <relationshipName>Discount_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Type__c</fullName>
        <description>The type of discount schedule determines how the discount is calculated.</description>
        <inlineHelpText>Choose the type of discount that determines how the amount or percentages will be subtracted from price.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Range</fullName>
                    <default>true</default>
                    <label>Range</label>
                </value>
                <value>
                    <fullName>Slab</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__UsePriceForAmount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the user defined Discount Schedule&apos;s Discount Unit will be set to Price.</description>
        <inlineHelpText>If checked, the user defined Discount Schedule&apos;s Discount Unit will be set to Price.</inlineHelpText>
        <label>Use Price For Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__UserDefined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies whether this schedule was created by an end user or an admin.</description>
        <inlineHelpText>Identifies whether this schedule was created by an end user or an admin.</inlineHelpText>
        <label>User Defined</label>
        <type>Checkbox</type>
    </fields>
    <label>Discount Schedule</label>
    <listViews>
        <fullName>SBQQ__All</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__Type__c</columns>
        <columns>SBQQ__Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Discount Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>